--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,14 @@
   </div>
 </nav>
     <%= yield %>
-    
+    <!-- Footer -->
+<footer class="page-footer font-small bg-dark text-white fixed-bottom">
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2019 Copyright: Segrelove Inc
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
     
   </body>
 </html>
