--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -1,19 +1,29 @@
-<div class="container">
-  <div class="row">
-    <div class="mx-auto">
-    <h1>Contacte nous !</h1>
-    <p>Tu peux nous contacter en envoyant un mail à</p>
-      <div class="row justify-content-md-center">
-        <div class="col-sm center">
-          <p>Moi à : mlesegret@gmail.com</p>
-        </div>
-        <div class="col-sm center">
-          <p>Moi à : mlesegret@gmail.com</p>
-        </div>
-        <div class="col-sm center">
-          <p>Et moi à : mlesegret@gmail.com</p>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="container contact-form">
+            <div class="contact-image">
+                <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
+            </div>
+            <form method="post">
+                <h3>Drop Us a Message</h3>
+               <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="txtEmail" class="form-control" placeholder="Your Email *" value="" />
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" />
+                        </div>
+                        <div class="form-group">
+                          <a href="https://www.dictionary.com/e/wp-content/uploads/2018/03/circle_game-1-300x300.jpg" class="btn btn-dark text-light">Send a message</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
+                        </div>
+                    </div>
+                </div>
+            </form>
 </div>
