--- a/app/views/static/team.html.erb
+++ b/app/views/static/team.html.erb
@@ -1,19 +1,28 @@
 <div class="container">
-  <div class="row">
-    <div class="mx-auto">
-    <h1>Voici notre Team !</h1>
-    <p>Elle est coolos hein, elle est composée de :</p>
-      <div class="row justify-content-md-center">
-        <div class="col-sm center">
-          <p>Moi</p>
-        </div>
-        <div class="col-sm center">
-          <p>Moi</p>
-        </div>
-        <div class="col-sm center">
-          <p>Et moi</p>
-        </div>
+<div class="row">
+      <div class="card col-md-3 col-md-offset-1 text-center text-white bg-dark mb-3 mx-auto mt-5" style="width: 400px;">
+          <div class="card-header ">Maxime Le Segretain</div>
+            <div class="card-body">
+          <h5 class="card-title">Fort en pomme?</h5>
+          <p><i>mlesegret@gmail.com</i><p><br/>
+          <a href="https://www.dictionary.com/e/wp-content/uploads/2018/03/circle_game-1-300x300.jpg" target="_blank" class="btn btn-light text-dark">Contact le !</a>
+            </div>
       </div>
-    </div>
-  </div>
+      <div class="card col-md-3 col-md-offset-1 text-center text-white bg-dark mb-3 mx-auto mt-5" style="width: 400px;">
+          <div class="card-header ">Greg Rouxel</div>
+            <div class="card-body">
+          <h5 class="card-title">Sir, Sir ! On en a gros !</h5>
+          <p><i>greg-rouxel@gmail.com</i><p><br/>
+          <a href="https://www.dictionary.com/e/wp-content/uploads/2018/03/circle_game-1-300x300.jpg" target="_blank"  class="btn btn-light text-dark">Contact le !</a>
+            </div>
+      </div>
+      <div class="card col-md-3 col-md-offset-1 text-center text-white bg-dark mb-3 mx-auto mt-5" style="width: 400px;">
+          <div class="card-header ">Olivier Cardinaux</div>
+            <div class="card-body">
+          <h5 class="card-title">"Je suis à 30 degrés ! " <br/>- "Et vous n'avez pas trop froid?"</h5>
+          <p><i>ocardinaux@gmail.com</i><p><br/>
+          <a href="https://www.dictionary.com/e/wp-content/uploads/2018/03/circle_game-1-300x300.jpg" target="_blank"  class="btn btn-light text-dark">Contact le !</a>
+            </div>
+      </div>
+</div>
 </div>
