--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= favicon_link_tag asset_path('favicon-32x32.png') %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">The Gossip Project</a>
+  <a class="navbar-brand" <%= link_to "The Gossip Project", root_path %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -28,11 +28,16 @@
       <a class="nav-link"<%= link_to "Contact", contact_path %>
       </li>
     </ul>
-    <span class="navbar-text">
-      Be the First to Gossip 
+    <span class="nav-item">
+      <a class="nav-link text-light" <%= link_to "Créer un Gossip !", new_gossip_path %>
     </span>
   </div>
 </nav>
+    <% flash.each do |name, msg| %>
+      <div class="alert alert-success text-center">
+        <%= msg %>
+      </div>
+    <% end %>
     <%= yield %>
     <!-- Footer -->
 <footer class="page-footer font-small bg-dark text-white fixed-bottom">
