--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,7 +1,7 @@
-<div class="container pt-5">
+<div class="container pt-5 mb-4">
   <h1>Bienvenue sur The Gossip Project !</h1>
   <p>Voici la liste de nos derniers gossips</p>
-  <div class="row pt-4">
+  <div class="row pt-4 pb-4">
     <table class="table">
       <thead class="table-dark">
         <tr>
