--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
     <% end %>
     <%= yield %>
     <!-- Footer -->
-<footer class="page-footer font-small bg-dark text-white fixed-bottom">
+<footer class="page-footer font-small bg-dark text-white fixed-bottom mt-5">
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2019 Copyright: Segrelove Inc
   </div>
