--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -11,6 +11,7 @@
           <th scope="col">Gossip</th>
           <th scope="col">Voir</th>
           <th scope="col">Edit</th>
+          <th scope="col">Supprimer</th>
         </tr>
       </thead>
       <tbody>
@@ -22,6 +23,7 @@
             <td><%= gossip.content %></td>
             <td><a href="<%= gossip_path(gossip.id)%>">Voir</a></td>
             <td><a href="<%= edit_gossip_path(gossip.id)%>">Edit</a></td>
+            <td><a href="<%= gossip_path(gossip.id)%>" data-confirm="Voulez-vous vraiment supprimer ce potin?" data-method="DELETE">Supprimer</a></td>
           </tr>
         <% end %>
       </tbody>
