--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -10,8 +10,28 @@
       <div class="card-body">
     <h5 class="card-title"><%= @gossip.title %></h5>
     <p><i><%= @gossip.content %></i></p>
-    <a href="/user/display/<%= @user.find(@gossip.user_id).id%>" class="btn btn-light">Voir l'auteur</a>
+
+    <a href="/user/<%= @user.find(@gossip.user_id).id%>" class="btn btn-light">Voir l'auteur</a>
+    <a href="<%= edit_gossip_path(@gossip.id)%>" class="btn btn-light">Edit</a>
+    <a class="btn btn-danger" data-confirm="Voulez-vous vraiment supprimer ce potin?" data-method="DELETE">Supprimer</a> 
   </div>
 </div>
 
+<div class="card bg-dark text-light">
+<h5 class="card-header">Commentaires</h5>
+<div class="card-body">
 
+<div class="container mt-5 mb-5">
+  <div class="row">
+    <div class="col-md-6">
+    <%= render partial: 'comments/form' %>
+    </div>
+
+    <div class="col-md-6">
+    <h1 class="pt_5">Commentaires</h1>
+    <%= render partial: 'gossips/comment', collection: @gossip.comments.reverse %>
+    </div>
+  </div>
+</div>
+</div>
+</div>
