--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,13 @@
         <a class="nav-link"<%= link_to "L'équipe", team_path %>
       </li>
       <li class="nav-item">
-      <a class="nav-link"<%= link_to "Contact", contact_path %>
+        <a class="nav-link"<%= link_to "Users", user_index_path %>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"<%= link_to "Villes", cities_path %>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"<%= link_to "Contact", contact_path %>
       </li>
     </ul>
     <span class="nav-item">
