--- a/app/views/gossips/_comment.html.erb
+++ b/app/views/gossips/_comment.html.erb
@@ -2,8 +2,12 @@
   <div class="card-body">
   <h4 class="card-title"><%= comment.author %>  <small class="text-muted">a posté</small></h4>
   <hr class="border-white">
-  <p class="card-text"><%= comment.content %> <%= comment.id %></p>
+  <p class="card-text"><%= comment.content %></p>
   <p><i>Posted <%= distance_of_time_in_words(comment.gossip.created_at, comment.created_at) %> later</i></p>
+  <% if session[:user_id] == comment.user_id %>
   <a href="<%= edit_gossip_comment_path(@gossip.id, comment.id) %>" class="btn btn-secondary">Edit</a> 
+  <%= link_to 'Delete', [comment.gossip, comment],
+                  method: :delete, class: "btn btn-danger", data: { confirm: 'Êtes-vous sûr?' } %>
+  <% end %>
   </div>
 </div>
