--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -1,6 +1,6 @@
 <% if @gossip.errors.any? %>
 <div class="alert alert-danger text-center" role="alert">
-  Tu as mal rampli le formulaire. Réessaye !
+  Tu as mal rempli le formulaire. Réessaye !
 </div>
 <% else %>
 <% end %>
