--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="card text-center text-white bg-dark mb-3 mx-auto mt-5" style="width: 400px;">
     <div class="card-header">
       <div class="card-body">
-    <h5 class="card-title"><%= @comment.author %></h5>
+    <h5 class="card-title"><%= current_user.name %></h5>
     <p><i><%= @comment.content %></i></p>
 
   </div>
