--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -12,26 +12,36 @@
     <p><i><%= @gossip.content %></i></p>
 
     <a href="/user/<%= @user.find(@gossip.user_id).id%>" class="btn btn-light">Voir l'auteur</a>
+    <% if session[:user_id] == @gossip.user_id %>
     <a href="<%= edit_gossip_path(@gossip.id)%>" class="btn btn-light">Edit</a>
     <a class="btn btn-danger" data-confirm="Voulez-vous vraiment supprimer ce potin?" data-method="DELETE">Supprimer</a> 
+    <% end %>
   </div>
 </div>
+
 
 <div class="card bg-dark text-light">
 <h5 class="card-header">Commentaires</h5>
-<div class="card-body">
+  <div class="card-body">
 
-<div class="container mt-5 mb-5">
-  <div class="row">
-    <div class="col-md-6">
-    <%= render partial: 'comments/form' %>
-    </div>
+    <div class="container mt-5 mb-5">
+      <div class="row">
+        <div class="col-md-6">
+        <% if session[:user_id] %>
+        <%= render partial: 'comments/form' %>
+        <% end %>
+        <% if session[:user_id].nil? %>
+        <h5>Vous devez créer un compte / vous identifier pour commenter </h5>
+        <a class="btn btn-light text-dark" href="<%= new_user_path %>">Créer un compte </a>
+        <a class="btn btn-light text-dark" href="<%= new_session_path %>">Log In</a>
+        <% end %>
+        </div>
 
-    <div class="col-md-6">
-    <h1 class="pt_5">Commentaires</h1>
-    <%= render partial: 'gossips/comment', collection: @gossip.comments.reverse %>
+        <div class="col-md-6">
+        <h1 class="pt_5">Commentaires</h1>
+        <%= render partial: 'gossips/comment', collection: @gossip.comments.reverse %>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-</div>
 </div>
