--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -9,7 +9,7 @@
         <%= f.text_area :content, class: "form-control" %>
     </div>
     <div class="form-group">
-      <button type="submit" class="btn btn-light text-dark">Poster</button>
+      <button type="submit" class="btn btn-light text-dark"><i class="fas fa-plus"></i></button>
     </div>
   <% end %>
 
