--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -9,10 +9,10 @@
           <th scope="col">Auteur</th>
           <th scope="col">Titre</th>
           <th scope="col">Gossip</th>
-          <th scope="col">Voir</th>
+          <th scope="col"></th>
           <% if session[:user_id] %>
-          <th scope="col">Edit</th>
-          <th scope="col">Supprimer</th>
+          <th scope="col"></th>
+          <th scope="col"></th>
           <% end %>
         </tr>
       </thead>
@@ -23,10 +23,10 @@
             <td> <%= @users.find(gossip.user_id).full_name %> </td>
             <td><%= gossip.title %></td>
             <td><%= gossip.content %></td>
-            <td><a href="<%= gossip_path(gossip.id)%>">Voir</a></td>
+            <td><a href="<%= gossip_path(gossip.id)%>"><i class="fas fa-eye"></i></a></td>
             <% if session[:user_id] == gossip.user_id %>
-            <td><a href="<%= edit_gossip_path(gossip.id)%>">Edit</a></td>
-            <td><a href="<%= gossip_path(gossip.id)%>" data-confirm="Voulez-vous vraiment supprimer ce potin?" data-method="DELETE">Supprimer</a></td>
+            <td><a href="<%= edit_gossip_path(gossip.id)%>"><i class="far fa-edit"></i></a></td>
+            <td><a href="<%= gossip_path(gossip.id)%>" data-confirm="Voulez-vous vraiment supprimer ce potin?" data-method="DELETE"><i class="fas fa-trash-alt"></i></a></td>
             <% end %>
           </tr>
         <% end %>
