--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -5,7 +5,7 @@
 <% else %>
 <% end %>
 
-<div class="container">
+<div class="container w-50">
 <h1 class="pt-5"> Crée ton Gossip!</h1>
   <%= form_tag url_for(action: 'create'), method: "post" do %>
     <div class="form-group">
@@ -17,7 +17,7 @@
       <%= text_area_tag 'content', @gossip.content, class: 'form-control', placeholder: "ex : Elle en mange 6 fois par jour" %>
     </div>
 
-      <%= submit_tag "Create Post", class: 'btn btn-default btn-dark text-light btn-submit' %>
+      <%= submit_tag "Publier", class: 'btn btn-default btn-dark text-light btn-submit' %>
     <% end %>
 </div>
 
