--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -10,6 +10,7 @@
           <th scope="col">Titre</th>
           <th scope="col">Gossip</th>
           <th scope="col"></th>
+          <th scope="col"></th>
           <% if session[:user_id] %>
           <th scope="col"></th>
           <th scope="col"></th>
@@ -24,6 +25,17 @@
             <td><%= gossip.title %></td>
             <td><%= gossip.content %></td>
             <td><a href="<%= gossip_path(gossip.id)%>"><i class="fas fa-eye"></i></a></td>
+            <% if session[:user_id] %>
+            <td><% pre_like = gossip.likes.find { |like| like.user_id == current_user.id} %>
+                <% if pre_like %>
+                  <i class="fas fa-heart-broken center"></i></a>
+                  <%= link_to 'unlike', gossip_like_path(gossip.id, pre_like), method: :delete %>
+                <% else %>
+                <i class="fas fa-heart"></i>
+                  <%= link_to 'like', gossip_likes_path(gossip.id), method: :post %>
+                <% end %></td>
+            <% end %>
+            <td><%= gossip.likes.count %><i class="fas fa-heart"></td>
             <% if session[:user_id] == gossip.user_id %>
             <td><a href="<%= edit_gossip_path(gossip.id)%>"><i class="far fa-edit"></i></a></td>
             <td><a href="<%= gossip_path(gossip.id)%>" data-confirm="Voulez-vous vraiment supprimer ce potin?" data-method="DELETE"><i class="fas fa-trash-alt"></i></a></td>
