--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -28,11 +28,13 @@
             <% if session[:user_id] %>
             <td><% pre_like = gossip.likes.find { |like| like.user_id == current_user.id} %>
                 <% if pre_like %>
-                  <i class="fas fa-heart-broken center"></i></a>
-                  <%= link_to 'unlike', gossip_like_path(gossip.id, pre_like), method: :delete %>
+                  <%= link_to(gossip_like_path(gossip.id, pre_like), method: :delete) do %>
+                      <i class="fas fa-heart-broken center"></i>
+                  <% end %>
                 <% else %>
-                <i class="fas fa-heart"></i>
-                  <%= link_to 'like', gossip_likes_path(gossip.id), method: :post %>
+                  <%= link_to(gossip_likes_path(gossip.id), method: :post ) do %>
+                      <i class="fas fa-heart"></i>
+                  <% end %>
                 <% end %></td>
             <% end %>
             <td><%= gossip.likes.count %><i class="fas fa-heart"></td>
